--- a/templates/update_form/merge_ligand_tmplt.html
+++ b/templates/update_form/merge_ligand_tmplt.html
@@ -63,7 +63,7 @@ Please input new reisude name in "New Residue Name" text box if no default value
 
 <table>
     <tr>
-        <td style="border-style:none"> <input type = 'submit' name = 'submit' value = 'Merge to ligand' /> </td>
+        <td style="border-style:none"> <input style="background-color:#CEECF5" type = 'submit' name = 'submit' value = 'Merge to ligand' /> </td>
     </tr>
 </table>
 
