--- a/templates/update_form/edit_polymer_sequence_tmplt.html
+++ b/templates/update_form/edit_polymer_sequence_tmplt.html
@@ -10,7 +10,7 @@
 <script>
 %(script)s
 </script>
-<script type="text/javascript" src="/entity_transform_ui/js/polymer.split.js"></script>
+<script type="text/javascript" src="/entity_transform_ui/js/polymer.delete.js"></script>
 </head>
 
 <body class="oneColLiqCtrHdr">
@@ -35,15 +35,15 @@
              <ul>
                  <li> Residues that have coordinates displayed with <span class="greenbg">green</span> background color.
                  <li> Mouseover 1-letter code to show 3-letter code and residue position in sequence (not the actual residue number in coordinate).
-                 <li> Click a 1-letter code to create break point between current and next residues for spliting.
-                 <li> Click "Remove" button to remove the current break point or click "Remove All" button to remove all break point(s).
+                 <li> Click a 1-letter code to mark the removal of this residue.
+                 <li> Click "Delete" button to delete the current removal or click "Delete All" button to delete all removal.
              </ul>
          </span>
 
-<form id="split_form" method="post" action="/service/entity/split_polymer" target="_blank">
-<input type="hidden" name="sessionid" value="%(sessionid)s" />
-<input type="hidden" name="identifier" value="%(identifier)s" />
-<input type="hidden" name="pdbid" value="%(pdbid)s" />
+<form id="edit_form" method="post" action="/service/entity/edit_polymer" target="_blank">
+<input type="hidden" id="sessionid" name="sessionid" value="%(sessionid)s" />
+<input type="hidden" id="identifier" name="identifier" value="%(identifier)s" />
+<input type="hidden" id="pdbid" name="pdbid" value="%(pdbid)s" />
 
 %(form_data)s
 
@@ -52,7 +52,7 @@
 
 <table>
     <tr>
-        <td style="border-style:none"> <input style="background-color:#CEECF5" type = 'submit' name = 'submit' value = 'Split polymer to polymer(s)/non-polymer(s)' /> </td>
+        <td style="border-style:none"> <input style="background-color:#CEECF5" type = 'submit' name = 'submit' value = 'Remove residue(s) from polymer sequence(s)' /> </td>
     </tr>
 </table>
 
